# kinetic-cpp-client

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  DoxygenMainPage.md  LICENSE  README.md  apply_license.sh  license_template  valgrind_linux.supp
cmake/: FindGflags.cmake  FindGlog.cmake
include/kinetic/: acls.h  batch_operation.h  blocking_kinetic_connection.h  blocking_kinetic_connection_interface.h  byte_stream.h  common.h  connection_handle.h  connection_options.h  drive_log.h  hmac_provider.h  incoming_value.h  key_range_iterator.h  kinetic.h  kinetic_connection.h  kinetic_connection_factory.h  kinetic_record.h  kinetic_status.h  message_stream.h  mock_incoming_value.h  mock_message_stream.h  nonblocking_kinetic_connection.h  nonblocking_kinetic_connection_interface.h  nonblocking_packet_service_interface.h  outgoing_value.h  reader_writer.h  status.h  status_code.h  threadsafe_blocking_kinetic_connection.h  threadsafe_nonblocking_connection.h
patches/: apply-glog-patches.sh  glog-build-on-mavericks.diff
src/integration_test/: batch_operation_test.cc  blocking_smoketest.cc  delete_test.cc  get_test.cc  integration_test.h  nonexistent_server_test.cc  put_test.cc
src/main/: batch_operation.cc  blocking_kinetic_connection.cc  byte_stream.cc  connection_handle.cc  copying_ssl_stream.h  hmac_provider.cc  incoming_string_value.cc  key_range_iterator.cc  kinetic_connection_factory.cc  message_stream.cc  nonblocking_kinetic_connection.cc  nonblocking_packet.cc  nonblocking_packet.h  nonblocking_packet_receiver.cc  nonblocking_packet_receiver.h  nonblocking_packet_sender.cc  nonblocking_packet_sender.h  nonblocking_packet_service.cc  nonblocking_packet_service.h  nonblocking_packet_writer_factory.cc  nonblocking_string.cc  nonblocking_string.h  outgoing_string_value.cc  reader_writer.cc  socket_wrapper.cc  socket_wrapper.h  socket_wrapper_interface.h  status_code.cc  threadsafe_blocking_kinetic_connection.cc  threadsafe_nonblocking_kinetic_connection.cc
src/test/: hmac_provider_test.cc  kinetic_cpp_client_test.cc  matchers.h  message_stream_test.cc  nonblocking_kinetic_connection_test.cc  nonblocking_packet_receiver_test.cc  nonblocking_packet_sender_test.cc  nonblocking_packet_service_test.cc  nonblocking_packet_test.cc  nonblocking_string_test.cc  string_value_test.cc
src/test/mock/: mock_callbacks.h  mock_hmac_provider.h  mock_nonblocking_packet_service.h  mock_socket_wrapper_interface.h
